--- a/day01/index.html
+++ b/day01/index.html
@@ -12,8 +12,8 @@
 
     <script>
         console.log("Hello")
-        console.log("...") //학번
-        console.log("...") //이름
+        console.log("202258018") //학번
+        console.log("배준원") //이름
 
         var btnTest = document.getElementById("bae-test")
         var inputName = document.getElentById("input -name")
