--- a/day01/index.html
+++ b/day01/index.html
@@ -12,15 +12,15 @@
 
     <script>
         console.log("Hello")
-        console.log("202258018") //학번
-        console.log("배준원") //이름
+        console.log("202258018")
+        console.log("배준원")
 
         var btnTest = document.getElementById("bae-test")
         var inputName = document.getElentById("input -name")
 
         btnTest.addEventlistener('click',()=> {
             //클릭하면 실행
-            console.log(" "+inputName.Value + "님")
+            console.log("안녕하세요"+ inputName.Value + "님")
         })
     </script>
     
