--- a/day01/index.html
+++ b/day01/index.html
@@ -16,11 +16,11 @@
         console.log("배준원")
 
         var btnTest = document.getElementById("bae-test")
-        var inputName = document.getElentById("input -name")
+        var inputName = document.getElementById("input -name")
 
-        btnTest.addEventlistener('click',()=> {
+        btnTest.addEventListener('click',()=> {
             //클릭하면 실행
-            console.log("안녕하세요"+ inputName.Value + "님")
+            console.log("안녕하세요"+ inputName.value + "님")
         })
     </script>
     
