--- a/day01/index.html
+++ b/day01/index.html
@@ -6,23 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Day01 Page</h1>
+    <h1> Hello Day 01 Page</h1>
+
     <input id="input-name" />
-    <button id="bae-test"> 테스트 </button>
+    <button id="bae-test"> 테스트버튼 </button>
+
 
     <script>
-        console.log("Hello")
+        console.log("hello")
         console.log("202258018")
         console.log("배준원")
 
-        var btnTest = document.getElementById("bae-test")
-        var inputName = document.getElementById("input -name")
+        var cwrtest = document.getElementById("bae-test")
+        var inputName = document.getElementById("input-name")
 
-        btnTest.addEventListener('click',()=> {
-            //클릭하면 실행
-            console.log("안녕하세요"+ inputName.value + "님")
-        })
+
+        cwrtest.addEventListener('click',()=> {
+             //클릭하면 실행
+            console.log("안녕하세요" + inputName.value + "님")
+
+        } )
     </script>
-    
+
 </body>
 </html>
