--- a/day06/ex01.html
+++ b/day06/ex01.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        h1 {
+            color: blue;
+        }
+        p {
+            color: red;
+            font-size: 24px;
+        }
+
+    </style>
+
 </head>
 <body>
     
     <h1> hello </h1>
+    <p> Hi Html5 </p>
 
 </body>
 </html>
