--- a/2025.10.19.html
+++ b/2025.10.19.html
@@ -5,6 +5,12 @@ git config user.name bae4049
 커밋 (...)
 동기화
 
+settings
+pages
+your site is live at ???
+??클릭
+/nya/옆에 day???입력해서 그거 복붙
+
 계산기 <day03-01>
 <!DOCTYPE html>
 <html lang="en">
@@ -17,7 +23,7 @@ git config user.name bae4049
     <div>
         <input id="inp-num1" /> <innput id="inp-num2"/> = <input id="inp-out"/>
     </div>
-    <div>
+    <div>  
         <button id="btn-plus"> submit </button>
     </div> 
     
@@ -96,7 +102,7 @@ git config user.name bae4049
     <title>Document</title>
 </head>
 <body>
-    <h1 id= "counter-output" >counter : 0</h1>
+    <h1 id= "counter-output" >counter : 0</h1> 
     <button id="bae-inc" > Inc </button>
     <button id="bae-dec" > Dec </button>
 
