--- a/day11/index.html
+++ b/day11/index.html
@@ -8,19 +8,23 @@
         @import url(main.css);
     </style>
 </head>
-<h1> Hello </h1>
-
 <body>
-
-    <div class="box-1"> 박스 1 </div>
-    <div class="box-1" style="justify-content: center;"> 박스 2 </div>
-    <div class="box-1" style="justify-content: flex-end;"> 박스 3 </div>
-    <div class="box-2"> 박스 1 </div>
-    <div class="box-2" style="justify-content: center;"> 박스 2 </div>
-    <div class="box-2" style="justify-content: flex-end;"> 박스 3 </div>
-    <div class="box-3"> 박스 1 </div>
-    <div class="box-3" style="justify-content: center;"> 박스 2 </div>
-    <div class="box-3" style="justify-content: flex-end;"> 박스 3 </div>
+    <h1> Hello </h1>
+    <div class="container">
+        <div class="box-1"> 박스1 </div>
+        <div class="box-1" style="justify-content: center;"> 박스2 </div>
+        <div class="box-1" style="justify-content: flex-end;">박스3</div>
+    </div>
+    <div class="container">
+        <div class="box-1" style="align-items: center;">박스4</div>
+        <div class="box-1" style="align-items: center; justify-content: center; ">박스5</div>
+        <div class="box-1" style="align-items: center; justify-content: end; ">박스6</div>
+    </div>
+        <div class="container">
+        <div class="box-1" style="align-items: end;" >박스7</div>
+        <div class="box-1" style="align-items: end; justify-content: center;">박스8</div>
+        <div class="box-1" style="align-items: end; justify-content: end;">박스9</div>
+    </div>
 
 
     <script type="module">
@@ -28,5 +32,5 @@
         main();
     </script>
 
-</body> 
+</body>
 </html>
