--- a/day09.ex01/index.html
+++ b/day09.ex01/index.html
@@ -22,6 +22,10 @@
         옵션
     </div>
 
+    ‹div class="top-right"›version 1.0‹/div>
+
+    ‹div class=" bottom-left">202258018배준원</div>
+
     <script type="module">
         import main from './index.js'
         main();
