--- a/day09.ex01/index.html
+++ b/day09.ex01/index.html
@@ -24,8 +24,8 @@
 
     ‹div class="top-right"›version 1.0‹/div>
 
-    ‹div class=" bottom-left">202258018배준원</div>
-
+    ‹div class="bottom-left"›202258018 배준원‹/div>
+    
     <script type="module">
         import main from './index.js'
         main();
