--- a/day13/index.html
+++ b/day13/index.html
@@ -30,7 +30,14 @@
         <div class="back-button" data-action="back">Back to Main Menu</div>    
     </main>
 
-
+    <main id="option-screen" class="hide">
+    <div class="option-title">Options</div>
+    <div class="option-item">Sound: On/Off</div>
+    <div class="option-item">Volume: Up/Down</div>
+    <div class="option-item">Graphics: High/Medium/Low</div>
+    <div class="option-item">Difficulty: Easy/Normal/Hard</div>
+    <div class="back-button" data-action="back">Back to Main Menu</div>
+</main>
 
     <footer>
         <div>copyright jj.ac.kr</div>
