--- a/2025.10.19.html
+++ b/2025.10.19.html
@@ -131,3 +131,32 @@ your site is live at ???
 </body>
 </html>
 
+기말고사 중앙 정렬 코드
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>중앙 정렬 코드</title>
+    <style>
+        body {
+            margin: 0;
+            height: 125vh; 
+            display: flex;
+            justify-content: center;  
+            align-items: center;      
+            background-color: #f0f0f0;
+        }
+
+        .text {
+            font-size: 5rem;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="text">202258018 배준원</div>
+
+</body>
+</html>
