--- a/2025.12.10.html
+++ b/2025.12.10.html
@@ -1,34 +1,101 @@
-1. Git 에 대해서 아는 대로 설명하시오
-Git은 버전 관리 시스템(Version Control System) 으로, 코드의 변경 내역을 저장하고 여러 개발자가 함께 협업할 수 있게 해주는 도구이다.
-과거 버전으로 되돌리거나, 새 기능을 만들기 위해 분기(브랜치)를 나눠서 개발할 수 있다.
-checkout : 특정 브랜치나 커밋으로 이동하는 명령
-commit : 작업한 내용을 저장(스냅샷 생성)
-push : 로컬 저장소의 commit을 GitHub 같은 원격 저장소로 업로드
-pull : 원격 저장소의 변경 내용을 내 로컬로 가져오는 것
+1.   CSS의 box-model에서 '바깥 여백'과 '안쪽 여백'을 설정하는 속성(property)은 각각 무엇인지 순서대로 쓰시오. 
 
-2. Git branch 에 대해서 설명하시오
-브랜치(branch) 는
-개발을 독립된 영역에서 진행할 수 있게 하는 기능
+안쪽 여백을 설정하는 속성: padding
+바깥 여백을 설정하는 속성: margin
+
+2.   수업에서 코드 관리, 버전 관리 및 과제 제출을 위해 사용을 강조한 플랫폼의 이름은 무엇인지 쓰시오. 
+
+github
+
+3.   JavaScript에서 id를 이용하여 특정 HTML 요소를 선택할 때 사용하는 함수는 무엇인지 쓰시오. 
+
+document.getElementById()
+
+4.   CSS에서 너비(width)와 높이(height)가 100px인 정사각형 요소를 완전한 원으로 만들기 위해 사용해야 하는 속성(property)과 값(value)은 무엇인지 쓰시오. 
+
+border-radius: 50%;
+
+5.   HTML <input> 요소에 type="range" 속성을 사용하여 만들 수 있는 컨트롤의 이름은 무엇인지 한글로 쓰시오. 
+
+슬라이더(slider)
+
+6.   강의 자료 1강에서는 GitHub를 '강호(江湖)'에 비유하며 그 중요성을 강조했습니다. 이 수업에서 GitHub가 왜 중요한지 서술하고, GitHub Pages를 이용하여 자신의 웹 페이지를 인터넷에 배포하는 과정을 설명하시오. 
+
+이 수업은 단순히 HTML, CSS, JavaScript의 문법과 Node.js를 배우는 것을 넘어,
+살아 움직이는 오픈소스 생태계라는 거친 무림에서 한 명의 개발자로서 어떻게 생존할지 
+그 과정을 배우기 위해 GitHub는 중요한 역할을 한다.
+1. GitHub 계정 및 리포지토리 생성
+2. 웹 페이지 파일 업로드 (index.html 포함)
+3. Settings → Pages에서 배포 브랜치/폴더 선택
+4. 제공된 URL로 웹 페이지 접속
+5. 수정 시 커밋 후 자동 업데이트 
+
+7.   CSS의 margin과 padding 속성의 차이점을 설명하고, 언제 각각을 사용해야 하는지 강의 자료의 예시를 바탕으로 설명하시오. 
+
+margin : 요소의 바깥 여백을 조절한다
+(박스와 박스 사이의 간격을 떨어뜨리고 싶을 때 사용한다
+box들을 여러개 만든 후 그것을 전부 8px 정도 떨어뜨렸다)
+padding : 요소의 안쪽 여백을 조절한다
+(박스 안에 글자나 내용이 너무 붙어있을 때 사용한다
+shape상자를 만든 후 shape글씨가 상자에 붙어있어서 8px를 떨어뜨렸다)
+
+8.   강의 자료 2강의 '라디오 버튼' 예제 코드를 보고, JavaScript 코드 document.querySelector('input[name="fruit"]:checked').value가 어떻게 여러 개의 라디오 버튼 중 선택된 하나의 값만을 가져올 수 있는지 그 원리를 단계별로 서술하시오. 
+
+1. 브라우저가 같은 name을 가진 라디오 버튼들에서 하나만 체크 상태로 가능하게 하고
+2. input[name="fruit"]:checked로 체크된 요소만 찾고,
+3. .querySelector가 첫 번째 요소를 반환한 뒤,
+4. .value로 해당 요소의 값을 읽어오는 방식으로 동작
+
+9.   HTML <input> 태그에 사용자가 입력한 값을 JavaScript로 가져올 때 사용하는 속성(property)은 무엇인지 쓰시오. 
+
+value
+
+10.   CSS 스타일을 HTML 문서 내부에 직접 작성하기 위해 사용하는 태그의 이름은 무엇이며, 이 태그는 일반적으로 HTML 문서의 <head>와 <body> 중 어디에 위치하는지 순서대로 쓰시오.
+
+<style>
+<head>안에 위치
+
+11.   사용자가 웹 페이지의 버튼을 클릭했을 때, 특정 텍스트 입력창 (<input type="text">)에 입력된 값을 가져와 화면에 표시하는 전체 과정을 단계별로 설명하시오. 반드시 document.getElementById(), addEventListener(), .value, .textContent 키워드를 모두 사용하여 서술하시오.
+
+1. document.getElementById()로 요소 선택
+2. addEventListener()로 버튼 클릭 이벤트 연결
+3. .value로 입력값 가져오기
+4. .textContent로 화면에 표시
+
+12. Git 에 대해서 아는 대로 설명하시오
+
+Git은 버전 관리 시스템(Version Control System) 으로, 코드의 변경 내역을 저장하고 여러 개발자가 함께 협업할 수 있게 해주는 도구이다.
+소프트웨어 개발 과정에서 코드의 변경 사항을 효율적으로 추적하고 관리할 수 있게 해주는 도구입니다.
+Git의 기능들은 ~ 들이 있다.
+checkout : 특정 브랜치나 커밋으로 이동하는 명령
+수정 (Modify): 작업 디렉토리에서 파일을 수정합니다.
+스테이지 (Stage): 수정한 파일을 스테이징 영역에 추가합니다
+커밋 (commit): 스테이징 영역의 변경 사항을 로컬 저장소에 영구적으로 기록합니다
+푸시 (Push): 로컬 저장소의 변경 사항을 원격 저장소로 전송한다
+풀 (Pull): 원격 저장소의 최신 변경 사항을 로컬 저장소로 가져와 병합한다
+Git 사용의 장점은 여러 개발자들의 협업이 용이하며, 변경 이력이 모두 기록 되어 안정성이 높고 브랜치(branch) 기능을 통해 개발 속도가 빠르게 사용할 수 있다.
+
+13. Git branch 에 대해서 설명하시오
+
+브랜치(branch) 는 기존 코드베이스에 영향을 주지 않으면서 독립적인 환경에서 작업을 할 수 있게 해주는 기능입니다.
 하나의 프로젝트 안에서 여러 명이 동시에 다른 기능을 개발할 때 사용된다.
 
-장점 : 메인 코드에 영향을 주지 않고 실험 가능
-여러 작업을 병렬로 수행 가능
-개발이 끝나면 merge하여 하나로 합침
+14. Git 의 Pull Request(PR) 에 대해서 설명하시오
 
-3. Git 의 Pull Request(PR) 에 대해서 설명하시오
-내가 만든 브랜치의 변경사항을 다른 브랜치(main 등)에 합쳐달라고 요청하는 절차
-직접 merge하지 않고, 팀원이 코드 리뷰 후 승인하면 병합됨
- 
-용도 : 협업 시 코드 리뷰 / 버그 방지 / 변경내역 기록 및 관리 / 팀 전체가 안전하게 기능을 추가할 수 있음
+Git 자체의 명령어가 아니라 GitHub, GitLab, Bitbucket과 같은 Git 호스팅 플랫폼에서 제공하는 협업 및 코드 검토(Code Review) 기능이다.
+PR은 단순히 코드를 합치는 요청을 넘어, 소프트웨어 개발 팀의 코드 품질을 관리하고 협업을 촉진하는 핵심 도구입니다.
 
-4. GitHub Pages 만드는 법을 설명하시오
+15. GitHub Pages 만드는 법을 설명하시오
+새 저장소 생성 
+
 GitHub 저장소 생성
+Pages 설정
 index.html 파일 업로드
 GitHub에서 Settings → Pages → Deploy from branch 선택
 Branch: main, 폴더: /root 선택 (이부분은 수정 못함 나도 머라말해야할지 모르겠음)
 Save → 제공된 URL로 접속
 
-6. Flex 에 대해서 최대한 상세하게 설명하세요
+16. Flex 에 대해서 최대한 상세하게 설명하세요
 
 가로/세로 정렬을 매우 쉽게 하는 1차원 레이아웃 방식.
 
@@ -59,23 +126,20 @@ order
 Flex의 특징
 레이아웃을 부드럽게 만들고 반응형 디자인에 유리함
 
-7. CSS, HTML, JS 의 관계를 설명하시오
+17. CSS, HTML, JS 의 관계를 설명하시오
  
-HTML(구조)
-
-페이지의 뼈대(구조)
-텍스트, 이미지, 버튼 등 요소 배치
+HTML-뼈대
+웹 페이지의 뼈대이자 내용물이라 할 수 있고, 사람의 골격이나 건축물의 기초 공사 느낌이다
+제목, 문단, 이미지, 링크, 버튼 등 웹 페이지에 표시되는 모든 요소들을 정의하고 배치합니다.
 
 CSS(디자인)
-
-HTML을 꾸며주는 스타일
-색, 폰트, 배치, 크기 등을 담당
+HTML에 디자인이나 스타일을 적용한다 사람한테 옷을 입히거나 화장을 하는 느낌이다
+색상, 글꼴, 레이아웃(크기, 위치), 애니메이션 등 콘텐츠를 사용자 친화적이고 보기 좋게 만듭니다.
 
 JavaScript(동작)
+웹 페이지에 상호작용성과 동적인 기능을 부여한다 사람의 신경이나 근육처럼 움직이거나 반응하게 한다
+마우스 클릭, 키보드 입력 등에 반응한다 / HTML(DOM)이나 CSS 스타일을 동적으로 변경한다
 
-웹페이지의 동적인 기능
-버튼 클릭 시 이벤트, 팝업, 데이터 처리
-
-HTML = 구조물
-CSS = 디자인
-JavaScript = 동작/기능
+HTML = 구조물 (무엇이 보일지 결정)
+CSS = 디자인 (어떻게 보일지 결정)
+JavaScript = 동작/기능 (어떻게 작동할지 결정)
