--- a/2025.12.10.html
+++ b/2025.12.10.html
@@ -3,21 +3,26 @@
 안쪽 여백을 설정하는 속성: padding
 바깥 여백을 설정하는 속성: margin
 
+
 2.   수업에서 코드 관리, 버전 관리 및 과제 제출을 위해 사용을 강조한 플랫폼의 이름은 무엇인지 쓰시오. 
 
 github
+
 
 3.   JavaScript에서 id를 이용하여 특정 HTML 요소를 선택할 때 사용하는 함수는 무엇인지 쓰시오. 
 
 document.getElementById()
 
+
 4.   CSS에서 너비(width)와 높이(height)가 100px인 정사각형 요소를 완전한 원으로 만들기 위해 사용해야 하는 속성(property)과 값(value)은 무엇인지 쓰시오. 
 
 border-radius: 50%;
 
+
 5.   HTML <input> 요소에 type="range" 속성을 사용하여 만들 수 있는 컨트롤의 이름은 무엇인지 한글로 쓰시오. 
 
 슬라이더(slider)
+
 
 6.   강의 자료 1강에서는 GitHub를 '강호(江湖)'에 비유하며 그 중요성을 강조했습니다. 이 수업에서 GitHub가 왜 중요한지 서술하고, GitHub Pages를 이용하여 자신의 웹 페이지를 인터넷에 배포하는 과정을 설명하시오. 
 
@@ -30,6 +35,7 @@ border-radius: 50%;
 4. 제공된 URL로 웹 페이지 접속
 5. 수정 시 커밋 후 자동 업데이트 
 
+
 7.   CSS의 margin과 padding 속성의 차이점을 설명하고, 언제 각각을 사용해야 하는지 강의 자료의 예시를 바탕으로 설명하시오. 
 
 margin : 요소의 바깥 여백을 조절한다
@@ -39,6 +45,7 @@ padding : 요소의 안쪽 여백을 조절한다
 (박스 안에 글자나 내용이 너무 붙어있을 때 사용한다
 shape상자를 만든 후 shape글씨가 상자에 붙어있어서 8px를 떨어뜨렸다)
 
+
 8.   강의 자료 2강의 '라디오 버튼' 예제 코드를 보고, JavaScript 코드 document.querySelector('input[name="fruit"]:checked').value가 어떻게 여러 개의 라디오 버튼 중 선택된 하나의 값만을 가져올 수 있는지 그 원리를 단계별로 서술하시오. 
 
 1. 브라우저가 같은 name을 가진 라디오 버튼들에서 하나만 체크 상태로 가능하게 하고
@@ -46,14 +53,17 @@ shape상자를 만든 후 shape글씨가 상자에 붙어있어서 8px를 떨어
 3. .querySelector가 첫 번째 요소를 반환한 뒤,
 4. .value로 해당 요소의 값을 읽어오는 방식으로 동작
 
+
 9.   HTML <input> 태그에 사용자가 입력한 값을 JavaScript로 가져올 때 사용하는 속성(property)은 무엇인지 쓰시오. 
 
 value
+
 
 10.   CSS 스타일을 HTML 문서 내부에 직접 작성하기 위해 사용하는 태그의 이름은 무엇이며, 이 태그는 일반적으로 HTML 문서의 <head>와 <body> 중 어디에 위치하는지 순서대로 쓰시오.
 
 <style>
 <head>안에 위치
+
 
 11.   사용자가 웹 페이지의 버튼을 클릭했을 때, 특정 텍스트 입력창 (<input type="text">)에 입력된 값을 가져와 화면에 표시하는 전체 과정을 단계별로 설명하시오. 반드시 document.getElementById(), addEventListener(), .value, .textContent 키워드를 모두 사용하여 서술하시오.
 
@@ -61,6 +71,7 @@ value
 2. addEventListener()로 버튼 클릭 이벤트 연결
 3. .value로 입력값 가져오기
 4. .textContent로 화면에 표시
+
 
 12. Git 에 대해서 아는 대로 설명하시오
 
@@ -75,56 +86,38 @@ checkout : 특정 브랜치나 커밋으로 이동하는 명령
 풀 (Pull): 원격 저장소의 최신 변경 사항을 로컬 저장소로 가져와 병합한다
 Git 사용의 장점은 여러 개발자들의 협업이 용이하며, 변경 이력이 모두 기록 되어 안정성이 높고 브랜치(branch) 기능을 통해 개발 속도가 빠르게 사용할 수 있다.
 
+
 13. Git branch 에 대해서 설명하시오
 
 브랜치(branch) 는 기존 코드베이스에 영향을 주지 않으면서 독립적인 환경에서 작업을 할 수 있게 해주는 기능입니다.
 하나의 프로젝트 안에서 여러 명이 동시에 다른 기능을 개발할 때 사용된다.
+
 
 14. Git 의 Pull Request(PR) 에 대해서 설명하시오
 
 Git 자체의 명령어가 아니라 GitHub, GitLab, Bitbucket과 같은 Git 호스팅 플랫폼에서 제공하는 협업 및 코드 검토(Code Review) 기능이다.
 PR은 단순히 코드를 합치는 요청을 넘어, 소프트웨어 개발 팀의 코드 품질을 관리하고 협업을 촉진하는 핵심 도구입니다.
 
-15. GitHub Pages 만드는 법을 설명하시오
-새 저장소 생성 
 
-GitHub 저장소 생성
-Pages 설정
-index.html 파일 업로드
-GitHub에서 Settings → Pages → Deploy from branch 선택
-Branch: main, 폴더: /root 선택 (이부분은 수정 못함 나도 머라말해야할지 모르겠음)
+15. GitHub Pages 만드는 법을 설명하시오
+
+저장소로 이동 후 저장소 확인한다
+Pages 설정을 해야해서 저장소의 Settings 탭에서 Pages 색션으로 이동한다
+배포 소스 지정 항목에서 소스 브랜치와 폴더를 필수적으로 지정한다
+저장 및 확인을 한다
+접속 주소로 이동한다 https://<username(사용자의 계정명)>.github.io/<repository-name(사용자의 파일명)>
 Save → 제공된 URL로 접속
+
 
 16. Flex 에 대해서 최대한 상세하게 설명하세요
 
-가로/세로 정렬을 매우 쉽게 하는 1차원 레이아웃 방식.
+한 방향(가로 또는 세로)의 아이템들을 정렬하고 공간을 분배하는 데 사용되며, 특히 컨테이너 내 아이템들의 크기를 유동적으로 조정하거나 수직/수평 중앙 정렬을 쉽게 구현할 수 있게 준다.
+Flex 레이아웃은 Flex Container(플렉스 컨테이너)와 Flex Item(플렉스 아이템) 두가지 요소로 구성되고
+Flex Container (플렉스 컨테이너)는 Flex 레이아웃을 적용받는 부모 요소이며, 여기에 적용하는 속성들은 내부 아이템들의 전체적인 배치, 방향, 공간 분배를 결정합니다.
+ex)row, row-reverse, column, column-reverse, nowrap, center, space-between
+Flex Item (플렉스 아이템)는 Flex Container의 직계 자식 요소이며, 아이템에 적용되는 속성들은 각 아이템 자신의 크기, 팽창/수축 비율, 개별 정렬 방식을 결정합니다.
+ex) order, flex-grow, flex-basis, flex-shrink
 
-Flex 주요 속성 (Container)
-1) flex-direction
-주축 방향 지정
-row(가로) / column(세로)
-2) justify-content
-주축 방향 정렬
-center, space-between, space-around, flex-end 등
-3) align-items
-교차축 방향 정렬
-center, flex-start, flex-end, stretch
-4) flex-wrap
-아이템 줄 바꿈 여부
-nowrap(기본), wrap
-
-Flex Item 속성
-flex-grow
-남는 공간을 아이템이 얼마나 차지할지 비율을 지정
-flex-shrink
-공간이 부족할 때 줄어드는 비율
-flex-basis
-기본 크기(초기 너비/높이)
-order
-아이템 순서 변경
-
-Flex의 특징
-레이아웃을 부드럽게 만들고 반응형 디자인에 유리함
 
 17. CSS, HTML, JS 의 관계를 설명하시오
  
